; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_delete_refs.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_delete_refs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i32 }

@the_repository = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @delete_refs(i8* %0, %struct.string_list* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.string_list*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.string_list* %1, %struct.string_list** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @the_repository, align 4
  %8 = call i32 @get_main_ref_store(i32 %7)
  %9 = load i8*, i8** %4, align 8
  %10 = load %struct.string_list*, %struct.string_list** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @refs_delete_refs(i32 %8, i8* %9, %struct.string_list* %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @refs_delete_refs(i32, i8*, %struct.string_list*, i32) #1

declare dso_local i32 @get_main_ref_store(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
